# SY-camera

./: .gitignore  camera.desktop  install-autostart.sh  pyproject.toml  start.sh
docs/: 架构设计与开发指南.md  测试方案.md  环境搭建与配置.md
docs/superpowers/plans/: 2026-04-27-live-preview-gui-plan.md
docs/superpowers/specs/: 2026-04-27-live-preview-gui-design.md
src/: camera_manager.py  main.py
src/ui/: controls.py  main_window.py  viewfinder.py
tests/: test_camera_manager.py  test_controls.py  test_main_window.py  test_viewfinder.py
